# homebrew-tsl-extract

./: LICENSE  README.md  pyproject.toml  tsl-to-nss.sh
Formula/: tsl-extract.rb
src/: tsl_extract.py
src/tsl_extract/: __init__.py  __main__.py  cli.py
tests/: test_tsl_extract.py
tst/: test_tsl_extract.py
